Build fails: https://build.neon.kde.org/job/bionic_unstable_kde_granatier_bin_amd64/55/console 20:59:48 /workspace/build/src/arena.cpp: In member function ‘void Arena::addPlayerPosition(const QPointF&)’: 20:59:48 /workspace/build/src/arena.cpp:98:26: error: ‘class QList<QPointF>’ has no member named ‘swapItemsAt’ 20:59:48 m_playerPosition.swapItemsAt(i, nShuffle); Since commit: https://cgit.kde.org/granatier.git/commit/?id=ec2c8e73764a6b097606e7a80653fb8d72031864 "Make it compile without deprecated method" - m_playerPosition.swap(i, nShuffle); + m_playerPosition.swapItemsAt(i, nShuffle); void QList::swapItemsAt(int i, int j) This function was introduced in Qt 5.13.
Git commit 2f49db67d85c7711c4199aae9e157204f0b8e4f7 by Laurent Montel. Committed on 18/09/2019 at 21:24. Pushed by mlaurent into branch 'master'. Fix Bug 412044 - Granatier master branch fails to build with Qt 5.12 M +4 -0 src/arena.cpp M +6 -1 src/game.cpp https://commits.kde.org/granatier/2f49db67d85c7711c4199aae9e157204f0b8e4f7