Fix Bug 412044 - Granatier master branch fails to build with Qt 5.12

BUG: 412044